--- a/src/OptionsWidget.ui
+++ b/src/OptionsWidget.ui
@@ -6,50 +6,71 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>446</width>
-    <height>313</height>
+    <width>591</width>
+    <height>324</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="7" column="0">
+   <item row="12" column="0">
     <widget class="QCheckBox" name="showOutputCheckBox">
      <property name="text">
       <string>Show binary's output</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="8" column="0">
     <widget class="QCheckBox" name="onProjectChangeCheckBox">
      <property name="text">
       <string>Check on active project change</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="10" column="0">
     <widget class="QCheckBox" name="unusedCheckBox">
      <property name="text">
       <string>Check for unused functions</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="7" column="1">
     <widget class="QCheckBox" name="onSaveCheckBox">
      <property name="text">
       <string>Check document on save</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="8" column="1">
     <widget class="QCheckBox" name="onFileAddedCheckBox">
      <property name="text">
       <string>Check added files</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="2">
+   <item row="14" column="1">
+    <widget class="QCheckBox" name="popupOnWarningCheckBox">
+     <property name="text">
+      <string>Popup issues pane when warnings found</string>
+     </property>
+    </widget>
+   </item>
+   <item row="14" column="0">
+    <widget class="QCheckBox" name="popupOnErrorCheckBox">
+     <property name="text">
+      <string>Popup issues pane when errors found</string>
+     </property>
+    </widget>
+   </item>
+   <item row="10" column="1">
+    <widget class="QCheckBox" name="inconclusiveCheckBox">
+     <property name="text">
+      <string>Check for inconclusive errors</string>
+     </property>
+    </widget>
+   </item>
+   <item row="9" column="0" colspan="2">
     <widget class="Line" name="line_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -86,14 +107,7 @@
      </item>
     </layout>
    </item>
-   <item row="9" column="1">
-    <widget class="QCheckBox" name="popupOnWarningCheckBox">
-     <property name="text">
-      <string>Popup issues pane when warnings found</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="0" colspan="2">
+   <item row="11" column="0" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <widget class="QLabel" name="label_3">
@@ -117,21 +131,21 @@
      </item>
     </layout>
    </item>
-   <item row="9" column="0">
-    <widget class="QCheckBox" name="popupOnErrorCheckBox">
+   <item row="7" column="0">
+    <widget class="QCheckBox" name="onBuildCheckBox">
      <property name="text">
-      <string>Popup issues pane when errors found</string>
+      <string>Check project on build</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="0" colspan="2">
+   <item row="13" column="0" colspan="2">
     <widget class="Line" name="line_3">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="10" column="0" colspan="2">
+   <item row="15" column="0" colspan="2">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -144,13 +158,6 @@
      </property>
     </spacer>
    </item>
-   <item row="5" column="1">
-    <widget class="QCheckBox" name="inconclusiveCheckBox">
-     <property name="text">
-      <string>Check for inconclusive errors</string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0" colspan="2">
     <widget class="Line" name="line">
      <property name="orientation">
@@ -158,12 +165,46 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QCheckBox" name="onBuildCheckBox">
-     <property name="text">
-      <string>Check project on build</string>
-     </property>
-    </widget>
+   <item row="4" column="0" rowspan="3" colspan="2">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="0,0">
+       <item>
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>File types to check: </string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="fileTypesEdit">
+         <property name="toolTip">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_4">
+       <property name="font">
+        <font>
+         <italic>true</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>List of file extensions separated by semicolons e.g. cpp;h;c</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line_4">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
